--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% block styles %}
+    {{ super() }}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/_s3_explorer.css') }}">
+{% endblock %}
 
 {% block title %}Home Page{% endblock %}
 
