add the list buckets s3 widget

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,4 +16,6 @@
 
 {% block scripts %}
     {{ super() }} <!-- Ensure base scripts are loaded -->
+    <script src="{{ url_for('static', filename='js/s3_manager.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/s3_explorer.js') }}"></script>
 {% endblock %}
