--- a/templates/_s3_explorer.html
+++ b/templates/_s3_explorer.html
@@ -33,7 +33,7 @@
                     <button class="btn btn-primary btn-block custom-btn" id="upload-file-btn">Upload File</button>
                     
                     <!-- Download and Delete buttons for files -->
-                    <button class="btn btn-info btn-block custom-btn mt-2" id="download-files-btn" disabled>Download Selected Files</button>
+                    <button class="btn btn-info btn-block custom-btn mt-2" id="download-files-btn">Download Selected Files</button>
                     <button class="btn btn-danger btn-block custom-btn mt-2" id="delete-files-btn" disabled>Delete Selected Files</button>
                 </div>
             </div>
