added create and delete functionality to s3 widget

--- a/templates/_s3_explorer.html
+++ b/templates/_s3_explorer.html
@@ -16,7 +16,7 @@
                     <!-- Button to create new bucket -->
                     <button class="btn btn-primary btn-block custom-btn" id="create-bucket-btn">Create New Bucket</button>
                     <!-- Button to delete selected bucket -->
-                    <button class="btn btn-danger btn-block custom-btn mt-2" id="delete-bucket-btn" disabled>Delete Selected Bucket</button>
+                    <button class="btn btn-danger btn-block custom-btn mt-2" id="delete-bucket-btn">Delete Selected Bucket</button>
                 </div>
 
                 <!-- Right Column: Files/Objects -->
