support for file delete to s3 widget

--- a/templates/_s3_explorer.html
+++ b/templates/_s3_explorer.html
@@ -34,7 +34,7 @@
                     
                     <!-- Download and Delete buttons for files -->
                     <button class="btn btn-info btn-block custom-btn mt-2" id="download-files-btn">Download Selected Files</button>
-                    <button class="btn btn-danger btn-block custom-btn mt-2" id="delete-files-btn" disabled>Delete Selected Files</button>
+                    <button class="btn btn-danger btn-block custom-btn mt-2" id="delete-files-btn">Delete Selected Files</button>
                 </div>
             </div>
         </div>
