--- a/templates/_s3_explorer.html
+++ b/templates/_s3_explorer.html
@@ -40,3 +40,29 @@
         </div>
     </div>
 </div>
+
+<!-- Modal for uploading files -->
+<div class="modal fade" id="uploadFilesModal" tabindex="-1" role="dialog" aria-labelledby="uploadFilesModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="uploadFilesModalLabel">Upload Files</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form id="file-upload-form">
+            <div class="form-group">
+              <label for="file-input">Select files to upload:</label>
+              <input type="file" id="file-input" class="form-control" multiple>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="confirm-upload-btn">Upload Files</button>
+        </div>
+      </div>
+    </div>
+  </div>
