fixed the file upload dialog to include a list display  s3 widget

--- a/templates/_s3_explorer.html
+++ b/templates/_s3_explorer.html
@@ -57,6 +57,10 @@
               <label for="file-input">Select files to upload:</label>
               <input type="file" id="file-input" class="form-control" multiple>
             </div>
+            <!-- Here we will display the selected files -->
+            <ul id="selected-file-list" class="list-group">
+              <!-- Selected files will be dynamically listed here -->
+            </ul>
           </form>
         </div>
         <div class="modal-footer">
@@ -65,4 +69,5 @@
         </div>
       </div>
     </div>
-  </div>
+</div>
+  
