--- a/static/css/_s3_explorer.css
+++ b/static/css/_s3_explorer.css
@@ -9,6 +9,9 @@ h4, h5 {
     border-radius: 20px; /* Rounded corners */
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4); /* Heavy shadow */
     padding: 20px;
+    margin-left: 0 !important; /* Force the card to the left */
+    margin-right: auto !important; /* Prevent it from being centered */
+    width: 90%;
 }
 
 /* Custom button design */
@@ -17,6 +20,16 @@ h4, h5 {
     border-radius: 10px; /* Rounded corners */
     padding: 2px 6px;  /* Increase padding */
     width: 80%;
+}
+
+/* Custom button design */
+.custom-btn2 {
+    font-size: 1.5rem; /* Larger text */
+    border-radius: 10px; /* Rounded corners */
+    padding: 2px 6px;  /* Increase padding */
+    width: 80%;
+    height: 80px;
+    background-color: #ED0800;
 }
 
 /* Extra margin for separation */
