--- a/templates/_s3_explorer.html
+++ b/templates/_s3_explorer.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container-fluid mt-5" style="max-width: 100%; text-align: left;">
     <div class="card custom-card">
         <div class="card-header">
             <h4>S3 Bucket Explorer</h4>
@@ -35,6 +35,7 @@
                     <!-- Download and Delete buttons for files -->
                     <button class="btn btn-info btn-block custom-btn mt-2" id="download-files-btn">Download Selected Files</button>
                     <button class="btn btn-danger btn-block custom-btn mt-2" id="delete-files-btn">Delete Selected Files</button>
+                    <button class="btn btn-danger btn-block custom-btn2 mt-2" id="process-files-btn">Process Selected Files</button>
                 </div>
             </div>
         </div>
