--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     {% endblock %}
     
     <!-- Main content block -->
-    <div class="container">
+    <div class="container-fluid">
         {% block content %}{% endblock %}
     </div>
 
