--- a/templates/home.html
+++ b/templates/home.html
@@ -7,8 +7,9 @@
 {% block title %}Home Page{% endblock %}
 
 {% block content %}
-    <h1>Welcome to the Home Page!</h1>
-    <p>This is the content specific to the home page.</p>
+    <br>
+    <h1>Welcome to Sandra's S3 Explorer.</h1>
+    <h2>Our Personal Hub to Effortlessly Manage and Share Files!</h2>
 
     <!-- Include the S3 Explorer here -->
     {% include '_s3_explorer.html' %}
