--- a/static/css/_s3_explorer.css
+++ b/static/css/_s3_explorer.css
@@ -14,6 +14,16 @@ h4, h5 {
     width: 90%;
 }
 
+/* Custom card design with rounded corners and heavy shadow */
+.custom-card2 {
+    border-radius: 20px; /* Rounded corners */
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4); /* Heavy shadow */
+    padding: 20px;
+    margin-left: 0 !important; /* Force the card to the left */
+    margin-right: auto !important; /* Prevent it from being centered */
+    width: 90%;
+    text-align: center;
+}
 /* Custom button design */
 .custom-btn {
     font-size: 1.5rem; /* Larger text */
@@ -29,6 +39,15 @@ h4, h5 {
     padding: 2px 6px;  /* Increase padding */
     width: 80%;
     height: 80px;
+}
+
+/* Custom button design */
+.custom-btn3 {
+    font-size: 1.5rem; /* Larger text */
+    border-radius: 10px; /* Rounded corners */
+    padding: 2px 6px;  /* Increase padding */
+    width: 500px;
+    height: 60px;
 }
 
 /* Extra margin for separation */
