--- a/templates/_s3_explorer.html
+++ b/templates/_s3_explorer.html
@@ -33,15 +33,33 @@
                     <button class="btn btn-primary btn-block custom-btn" id="upload-file-btn">Upload File</button>
                     
                     <!-- Download and Delete buttons for files -->
-                    <button class="btn btn-info btn-block custom-btn mt-2" id="download-files-btn">Download Selected Files</button>
                     <button class="btn btn-danger btn-block custom-btn mt-2" id="delete-files-btn">Delete Selected Files</button>
-                    <button class="btn btn-warning btn-block custom-btn2 mt-2" id="process-files-btn">Process Selected Files</button>
+                    <button class="btn btn-secondary btn-block custom-btn mt-2" id="download-files-btn">Download Selected Files</button>
+                    <button class="btn btn-info btn-block custom-btn2 mt-2" id="Add-files-btn">Add Selected Files</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
+<br>
+<br>
+<div class="container-fluid mt-5" style="max-width: 100%; text-align: left;"></div>
+    <div class="card custom-card2">
+        <div class="card-header">
+            <h4>S3 Bucket File Select</h4>
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-12">
+                    <button class="btn btn-warning btn-block custom-btn3 mt-2" id="process-files-btn">Process Selected Files</button>
+                    <button class="btn btn-danger btn-block custom-btn3 mt-2" id="clear-files-btn">clear Selected Files</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<br>
+<br>
 <!-- Modal for uploading files -->
 <div class="modal fade" id="uploadFilesModal" tabindex="-1" role="dialog" aria-labelledby="uploadFilesModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
