--- a/templates/_s3_explorer.html
+++ b/templates/_s3_explorer.html
@@ -51,6 +51,7 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-md-12">
+                    <ul id="accumulated-files-list"></ul>
                     <button class="btn btn-warning btn-block custom-btn3 mt-2" id="process-files-btn">Process Selected Files</button>
                     <button class="btn btn-danger btn-block custom-btn3 mt-2" id="clear-files-btn">clear Selected Files</button>
                 </div>
