Added a new card for accumulated selection of files

--- a/static/css/_s3_explorer.css
+++ b/static/css/_s3_explorer.css
@@ -54,3 +54,30 @@ h4, h5 {
 .mt-2 {
     margin-top: 15px;
 }
+
+
+/* Override the default button background and text color */
+.custom-btn-color1 {
+    background-color: #d08856 !important;  /* Custom background color */
+    color: rgb(27, 27, 27);               /* Custom text color */
+    border: none;               /* Remove default border */
+}
+
+/* Override the button hover state */
+.custom-btn-color1:hover {
+    background-color: #d16f29 !important;  /* Custom hover background color */
+    color: rgb(27, 27, 27);;             /* Custom hover text color */
+}
+
+/* Override the default button background and text color */
+.custom-btn-color2 {
+    background-color: #aa210f !important;  /* Custom background color */
+    color: rgb(238, 235, 235);               /* Custom text color */
+    border: none;               /* Remove default border */
+}
+
+/* Override the button hover state */
+.custom-btn-color2:hover {
+    background-color: #941808 !important;  /* Custom hover background color */
+    color: rgb(238, 235, 235);            /* Custom hover text color */
+}
