Building processing template for selected files ..

--- a/templates/_op_on_files.html
+++ b/templates/_op_on_files.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Accumulated Files</h1>
+    <h1>Selected Files For Processing:</h1>
 
     <!-- Card to display the accumulated files -->
     <div class="card">
