--- a/templates/show_accumulated_files.html
+++ b/templates/show_accumulated_files.html
@@ -17,5 +17,5 @@
 {% block scripts %}
     {{ super() }} <!-- Ensure base scripts are loaded -->
     <script src="{{ url_for('static', filename='js/s3_manager.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/s3_explorer.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/s3_process.js') }}"></script>
 {% endblock %}
